--- a/src/assets/css/_mixin.scss
+++ b/src/assets/css/_mixin.scss
@@ -29,7 +29,7 @@
   }
 }
 
-%check_and-setting {
+%check-and-setting {
   content: "";
   display: block;
   position: absolute;
@@ -37,4 +37,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
+}
+
+
+%center-setting{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
