--- a/src/assets/css/_home.scss
+++ b/src/assets/css/_home.scss
@@ -123,6 +123,17 @@
         border-radius: var(--cafe-radius-sm);
       }
     }
+    &-clear{
+      @extend %center-setting;
+      color:var(--cafe-color-brown-lighter);
+      height: 100%;
+      svg{
+        width: 8rem;
+        height: 8rem;
+        color: inherit;
+        margin-bottom: var(--cafe--margin-xs);
+      }
+    }
     &-btn {
       @extend %popup-base-setting-2;
       display: block;
@@ -132,7 +143,7 @@
       margin: var(--cafe--margin-xxs) 0;
       width: 100%;
     }
-    &-remark{
+    &-option{
       color: var(--cafe-color-brown-lighter);
     }
   }
@@ -235,11 +246,8 @@
       flex-direction: row !important;
       margin: 0 !important;
       div {
-        display: flex;
+        @extend %center-setting;
         width: 1.5rem;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
       }
     }
     &-num {
@@ -251,7 +259,8 @@
       padding-top: 0.1rem;
       text-align: center;
       svg {
-        width: 1.6rem;
+        padding: 0.5rem 0.7rem 0.7rem 0.7rem;
+        width: 100%;
       }
     }
     &-add {
