--- a/src/assets/css/_home.scss
+++ b/src/assets/css/_home.scss
@@ -93,18 +93,11 @@
       margin-top: var(--cafe--margin-xs);
       padding: var(--cafe--padding-sm);
       overflow: hidden;
-      h1 {
-        font-size: var(--cafe--font-xxxl);
+      h3 {
         line-height: 1.5;
       }
-      h3 {
-        font-size: var(--cafe--font-md);
-      }
       hr {
-        border: 0;
-        opacity: 100;
-        background: var(--cafe-color-brown);
-        border-top: 0.2rem dashed var(--cafe-color-white);
+        @extend %hr-dotted-setting;
       }
     }
     &-content {
