fix: 調整css及修正titlebar

--- a/src/assets/css/_fill-in.scss
+++ b/src/assets/css/_fill-in.scss
@@ -1,22 +1,24 @@
 @use "mixin" as *;
-.new{
-    &__container{
-        @extend %popup-base-setting;
-        flex-direction: column;
-        margin-top: var(--cafe--margin-xs);
-        color: var(--cafe-color-brown);
-        padding:var(--cafe--padding-sm);
-        p{
-            font-size: 1.2rem;
-        }
-        hr{
-            @extend %hr-dotted-setting;
-        }
+.new {
+  &__container {
+    @extend %popup-base-setting;
+    flex-direction: column;
+    margin-top: var(--cafe--margin-xs);
+    border: 0.1rem solid var(--cafe-color-brown-lighter);
+    color: var(--cafe-color-brown);
+    padding: var(--cafe--padding-sm);
+    transition: none;
+    p {
+      font-size: 1.2rem;
     }
-    &__gray-text{
-        color: var(--cafe-color-gray-darken);
+    hr {
+      @extend %hr-dotted-setting;
     }
-    &__strong-text{
-        font-weight: 600;
-    }
+  }
+  &__gray-text {
+    color: var(--cafe-color-gray-darken);
+  }
+  &__strong-text {
+    font-weight: 600;
+  }
 }
