--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -1,43 +1,45 @@
 @use "mixin" as *;
 
-.check__and-radio,
-.check__and-mark {
-  height: 1.7rem;
-  width: 1.7rem;
-  border: 0.15rem solid var(--cafe-color-brown);
-  border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  transition: border-color 0.2s ease, box-shadow 0.2s ease;
-  &:hover {
-    box-shadow: inset 0 0 0 0.1rem var(--cafe-color-brown);
-  }
-}
-
-.check__and-radio {
-  &::after {
-    @extend %check-and-setting;
-    height: 0.7rem;
-    width: 0.7rem;
+.check {
+  &__and-radio,
+  &__and-mark {
+    height: 1.7rem;
+    width: 1.7rem;
+    border: 0.15rem solid var(--cafe-color-brown);
     border-radius: 50%;
-    background-color: var(--cafe-color-brown);
+    display: inline-block;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: border-color 0.2s ease, box-shadow 0.2s ease;
+    &:hover {
+      box-shadow: inset 0 0 0 0.1rem var(--cafe-color-brown);
+    }
+  }
+  &__and-radio,
+  &__and-mark {
+    &::after {
+      @extend %check-and-setting;
+      height: 0.7rem;
+    }
+  }
+  &__and-radio {
+    &::after {
+      width: 0.7rem;
+      border-radius: 50%;
+      background-color: var(--cafe-color-brown);
+    }
+  }
+  &__and-mark {
+    border-radius: 10%;
+    &::after {
+      width: 0.3rem;
+      border: solid var(--cafe-color-brown);
+      border-width: 0 0.15rem 0.15rem 0;
+    }
   }
 }
-
-.check__and-mark {
-  border-radius: 10%;
-  &::after {
-    @extend %check-and-setting;
-    height: 0.7rem;
-    width: 0.3rem;
-    border: solid var(--cafe-color-brown);
-    border-width: 0 0.15rem 0.15rem 0;
-  }
-}
-
 input[type="radio"]:checked + label .check__and-radio::after,
 input[type="checkbox"]:checked + label .check__and-mark::after {
   animation: pop-in 0.2s ease-out forwards;
@@ -47,6 +49,27 @@ input[type="checkbox"]:checked + label .check__and-mark::after {
 input[type="checkbox"]:not(:checked) + label .popup__text-selected::after {
   animation: pop-out 0.2s ease-out forwards;
   opacity: 0;
+}
+
+.check {
+  &__inputBox {
+    label {
+      font-size: var(--cafe--font-md);
+      padding-left: var(--cafe--padding-xxs);
+    }
+    input {
+      font-size: var(--cafe--font-sm);
+      @extend %base-btn-setting;
+      border-color: var(--cafe-color-brown-lighter);
+      padding: var(--cafe--padding-xs);
+      color: var(--cafe-color-brown);
+      resize: none;
+      &:focus {
+        outline: none;
+        border-color: var(--cafe-color-brown);
+      }
+    }
+  }
 }
 
 @keyframes pop-in {
