--- a/src/assets/css/_popup.scss
+++ b/src/assets/css/_popup.scss
@@ -33,14 +33,13 @@
       height: 2.5rem;
       color: var(--cafe-color-brown);
       background: var(--cafe-color-white);
-      &:hover{
+      &:hover {
         @extend %base-btn-hover;
       }
       &:disabled {
         background-color: inherit;
         color: var(--cafe-color-brown);
       }
-
     }
   }
 
@@ -68,11 +67,11 @@
   &__footer {
     @extend %popup-base-setting;
     font-size: var(--cafe--font-lg);
-    padding: 1.5rem 2rem;
+    padding: var(--cafe--padding-xs) var(--cafe--padding-lg);
     gap: 1rem;
     z-index: 2;
     color: var(--cafe-color-brown);
-    p{
+    p {
       text-align: center;
       width: 2rem;
     }
@@ -80,12 +79,12 @@
       background-color: var(--cafe-color-white);
     }
     &-button {
+      padding: var(--cafe--padding-xxs) var(--cafe--padding-xs);
       @extend %popup-base-setting-2;
       letter-spacing: 0.2rem;
       align-items: center;
-      padding: 0 var(--cafe--padding-xs);
       background-color: var(--cafe-color-brown) !important;
-      &:hover{
+      &:hover {
         background-color: var(--cafe-color-white) !important;
       }
       &::after {
@@ -172,14 +171,14 @@
         position: relative;
         padding-left: 3rem;
       }
-      textarea{
+      textarea {
         @extend %base-btn-setting;
         border-color: var(--cafe-color-brown-lighter);
-        padding: var(--cafe--padding-xs);
+        padding: var(--cafe--padding-xxs);
         font-size: var(--cafe--font-lg);
         color: var(--cafe-color-brown);
         resize: none;
-        &:focus{
+        &:focus {
           outline: none;
           border-color: var(--cafe-color-brown); /* 聚焦時的邊框顏色 */
         }
