--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -174,7 +174,7 @@ hr {
   height: 0.5px !important;
 }
 
-.popup__container svg, .popup__text-option textarea, .User__side-label li, .User__side-left, .User__side-right, .User__shop-container, .menu__content li {
+.popup__container svg, .popup__text-option textarea, .User__side-label li, .User__side-left, .User__side-right, .User__shop-container, .menu__content li, .check__inputBox input {
   display: flex;
   border-radius: var(--cafe-radius-md);
   border: 0.1rem solid var(--cafe-color-brown-lighter);
@@ -230,8 +230,7 @@ hr {
   border-top: 0.2rem dashed var(--cafe-color-white);
 }
 
-.check__and-radio,
-.check__and-mark {
+.check__and-radio, .check__and-mark {
   height: 1.7rem;
   width: 1.7rem;
   border: 0.15rem solid var(--cafe-color-brown);
@@ -243,23 +242,21 @@ hr {
   transform: translateY(-50%);
   transition: border-color 0.2s ease, box-shadow 0.2s ease;
 }
-.check__and-radio:hover,
-.check__and-mark:hover {
+.check__and-radio:hover, .check__and-mark:hover {
   box-shadow: inset 0 0 0 0.1rem var(--cafe-color-brown);
 }
-
-.check__and-radio::after {
+.check__and-radio::after, .check__and-mark::after {
   height: 0.7rem;
+}
+.check__and-radio::after {
   width: 0.7rem;
   border-radius: 50%;
   background-color: var(--cafe-color-brown);
 }
-
 .check__and-mark {
   border-radius: 10%;
 }
 .check__and-mark::after {
-  height: 0.7rem;
   width: 0.3rem;
   border: solid var(--cafe-color-brown);
   border-width: 0 0.15rem 0.15rem 0;
@@ -274,6 +271,22 @@ input[type=checkbox]:checked + label .check__and-mark::after {
 input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
   animation: pop-out 0.2s ease-out forwards;
   opacity: 0;
+}
+
+.check__inputBox label {
+  font-size: var(--cafe--font-md);
+  padding-left: var(--cafe--padding-xxs);
+}
+.check__inputBox input {
+  font-size: var(--cafe--font-sm);
+  border-color: var(--cafe-color-brown-lighter);
+  padding: var(--cafe--padding-xs);
+  color: var(--cafe-color-brown);
+  resize: none;
+}
+.check__inputBox input:focus {
+  outline: none;
+  border-color: var(--cafe-color-brown);
 }
 
 @keyframes pop-in {
@@ -300,8 +313,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  padding: 3rem 3rem 0;
-  gap: 1rem;
+  padding: 0rem 3rem;
   overflow-x: hidden;
 }
 .User__side {
@@ -312,7 +324,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 .User__side-label {
   display: flex;
   gap: 1rem;
-  padding: 1rem 0rem;
+  padding: 0rem 0rem 1rem 0;
   overflow-x: auto;
   scrollbar-width: none;
 }
@@ -374,7 +386,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 }
 .User__shop-container {
   flex-direction: column;
-  max-height: calc(100vh - 10.5rem);
+  max-height: calc(100vh - 11rem);
   color: var(--cafe-color-brown);
   background-color: var(--cafe-color-white);
   margin-top: var(--cafe--margin-xs);
@@ -426,7 +438,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 .menu__content {
   color: var(--cafe-color-brown);
   max-width: 100%;
-  max-height: calc(100vh - 20rem);
+  max-height: calc(100vh - 19.5rem);
   scrollbar-width: none;
   overflow-y: auto;
 }
@@ -606,7 +618,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 }
 .popup__footer {
   font-size: var(--cafe--font-lg);
-  padding: 1.5rem 2rem;
+  padding: var(--cafe--padding-xs) var(--cafe--padding-lg);
   gap: 1rem;
   z-index: 2;
   color: var(--cafe-color-brown);
@@ -619,9 +631,9 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
   background-color: var(--cafe-color-white);
 }
 .popup__footer-button {
+  padding: var(--cafe--padding-xxs) var(--cafe--padding-xs);
   letter-spacing: 0.2rem;
   align-items: center;
-  padding: 0 var(--cafe--padding-xs);
   background-color: var(--cafe-color-brown) !important;
 }
 .popup__footer-button:hover {
@@ -710,7 +722,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 }
 .popup__text-option textarea {
   border-color: var(--cafe-color-brown-lighter);
-  padding: var(--cafe--padding-xs);
+  padding: var(--cafe--padding-xxs);
   font-size: var(--cafe--font-lg);
   color: var(--cafe-color-brown);
   resize: none;
@@ -749,8 +761,10 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 .new__container {
   flex-direction: column;
   margin-top: var(--cafe--margin-xs);
+  border: 0.1rem solid var(--cafe-color-brown-lighter);
   color: var(--cafe-color-brown);
   padding: var(--cafe--padding-sm);
+  transition: none;
 }
 .new__container p {
   font-size: 1.2rem;
