--- a/src/assets/css/_animation.scss
+++ b/src/assets/css/_animation.scss
@@ -11,20 +11,20 @@
   opacity: 1;
 }
 
-.move-in-enter-from,
-.move-in-leave-to {
+.move-up-enter-from {
   opacity: 0;
-  transform: translateY(-1rem);
+  transform: translateY(2rem);
 }
-
-.move-in-enter-active,
-.move-in-leave-active {
-  transition: opacity 0.35s cubic-bezier(0.5, 0, 0.5, 1),
-    transform 0.35s cubic-bezier(0.5, 0, 0.5, 1);
+.move-up-enter-active,
+.move-up-leave-active {
+  transition: all 0.35s ease-out;
 }
-
-.move-in-enter-to,
-.move-in-leave-from {
+.move-up-enter-to,
+.move-up-leave-from {
   opacity: 1;
   transform: translateY(0);
+}
+.move-up-leave-to {
+  opacity: 0;
+  transform: translateY(-2rem);
 }
