--- a/src/assets/css/_popup.scss
+++ b/src/assets/css/_popup.scss
@@ -12,7 +12,7 @@
   }
   &__close {
     position: absolute;
-    right: 1.5rem;
+    right: 2rem;
     top: 1.5rem;
     cursor: pointer;
     transform: rotate(45deg);
@@ -45,7 +45,8 @@
   &__header {
     @extend %popup-base-setting;
     justify-content: space-between;
-    padding: 1rem;
+    padding: var(--cafe--padding-lg);
+    color: var(--cafe-color-brown);
     z-index: 2;
 
     h2 {
@@ -99,14 +100,10 @@
     height: 205px;
     width: 100%;
     object-fit: cover;
-    &-rounded {
-      border-top-right-radius: var(--cafe-radius-sm);
-      border-top-left-radius: var(--cafe-radius-sm);
-    }
   }
   &__text-content {
     display: grid;
-    padding: 2rem 2rem 0rem 2rem;
+    padding: 0 var(--cafe--padding-lg);
     gap: 0.5rem;
     color: var(--cafe-color-brown);
     span {
@@ -202,18 +199,6 @@
   .popup {
     &__container {
       max-width: 400px;
-    }
-  }
-}
-@media (max-width: 400px) {
-  .popup {
-    &__wrapper {
-      position: fixed;
-      display: block;
-    }
-    &__header,
-    &__footer {
-      border-radius: 0px;
     }
   }
 }
