--- a/src/assets/css/_home.scss
+++ b/src/assets/css/_home.scss
@@ -272,6 +272,6 @@
 
 @media (max-width: 575.98px) {
   .menu__content {
-    max-height: calc(100vh - 26rem);
+    max-height: calc(100svh - 25rem);
   }
 }
