--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -331,10 +331,23 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
   background-color: var(--cafe-color-bisque);
   z-index: 1;
 }
+.User__side-row {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  flex-grow: 1;
+  overflow: hidden;
+}
+.User__side-col {
+  margin-top: 0 !important;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 .User__side-label {
   display: flex;
   gap: 1rem;
-  padding: 0rem 0rem 1rem 0;
+  padding-bottom: 1rem;
   overflow-x: auto;
   scrollbar-width: none;
 }
@@ -570,7 +583,10 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
 
 @media (max-width: 575.98px) {
   .menu__content {
-    max-height: calc(100dvh - 24rem);
+    flex-grow: 1;
+  }
+  .User__side-row {
+    margin-bottom: 2rem !important;
   }
 }
 .popup__wrapper {
@@ -695,8 +711,7 @@ input[type=checkbox]:not(:checked) + label .popup__text-selected::after {
   border-radius: 1rem;
 }
 .popup__text-option h3,
-.popup__text-option h5,
-.popup__text-option li {
+.popup__text-option h5 {
   line-height: inherit;
 }
 .popup__text-option li {
