--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -3,6 +3,6 @@
 @forward "base";
 @forward "mixin";
 @forward "custom";
-@forward "home";
-@forward "popup";
-@forward "fill-in";
+@forward "user/home";
+@forward "user/popup";
+@forward "user/fill-in";
