--- a/src/assets/css/user/_home.scss
+++ b/src/assets/css/user/_home.scss
@@ -1,4 +1,4 @@
-@use "mixin" as *;
+@use "../mixin" as *;
 .User {
   &__container {
     display: flex;
@@ -13,7 +13,7 @@
     background-color: var(--cafe-color-bisque);
     z-index: 1;
     &-row {
-      margin-top: 0!important;
+      margin-top: 0 !important;
       margin-bottom: 0 !important;
       flex-grow: 1;
       overflow: hidden;
@@ -28,7 +28,7 @@
     &-label {
       display: flex;
       gap: 1rem;
-      padding-bottom: 1rem;
+      padding: var(--cafe--padding-xs) 0;
       overflow-x: auto;
       scrollbar-width: none;
       li {
@@ -132,8 +132,9 @@
       color: var(--cafe-color-brown-lighter);
       height: 100%;
       svg {
-        width: 8rem;
-        height: 8rem;
+        color: var(--cafe-color-brown-lighter) !important;
+        width: 8rem !important;
+        height: 8rem !important;
         color: inherit;
         margin-bottom: var(--cafe--margin-xs);
       }
@@ -152,12 +153,11 @@
     }
   }
 }
-
 .menu {
   &__content {
     color: var(--cafe-color-brown);
     max-width: 100%;
-    max-height: calc(100vh - 20rem);
+    max-height: calc(100vh - 21rem);
     scrollbar-width: none;
     overflow-y: auto;
     &::-webkit-scrollbar {
@@ -260,7 +260,6 @@
       font-size: 1.5rem;
     }
     &-trash {
-      padding-top: 0.1rem;
       text-align: center;
       svg {
         padding: 0.5rem 0.7rem 0.7rem 0.7rem;
@@ -280,6 +279,41 @@
       bottom: -6%;
       right: -60%;
     }
+  }
+}
+
+@media (max-width: 991px) {
+  .User {
+    &__shop {
+      &-container {
+        margin: 0;
+        border: none;
+        padding: 0 var(--cafe--padding-sm);
+        h3 {
+          display: none;
+        }
+        .d-flex > .User__shop-btn {
+          display: none;
+        }
+        hr,
+        .d-flex.justify-content-between.mb-2,
+        .d-flex.justify-content-between {
+          display: none !important;
+        }
+      }
+      &-content {
+        height: 100%;
+      }
+      &-clear {
+        margin-top: 20vh;
+      }
+      &-icon {
+        border: none !important;
+      }
+    }
+  }
+  .menu__image {
+    border: none;
   }
 }
 
