--- a/src/assets/css/user/_popup.scss
+++ b/src/assets/css/user/_popup.scss
@@ -201,16 +201,15 @@
   }
 }
 
+
 @media (min-width: 768px) {
   .popup__img {
     height: 317px;
   }
 }
 
-@media (max-width: 768px) {
-  .popup {
-    &__container {
-      max-width: 400px;
-    }
+@media (max-width: 425px) {
+  .popup__container {
+    border-radius: 0 !important;
   }
 }
