--- a/src/assets/css/_variable.scss
+++ b/src/assets/css/_variable.scss
@@ -30,8 +30,9 @@
   --cafe--padding-xs: 1rem;
   --cafe--padding-sm: 1.5rem;
   --cafe--padding-lg: 2rem;
+  --cafe--padding-xxl: 3rem;
 
   --cafe--margin-xxs: 0.5rem;
   --cafe--margin-xs: 1rem;
-  --cafe--margin-sm:1.5rem;
+  --cafe--margin-sm: 1.5rem;
 }
