--- a/src/assets/css/_custom.scss
+++ b/src/assets/css/_custom.scss
@@ -1,17 +1,12 @@
 @use "mixin" as *;
 
+// checkbox多選及單選的樣式
 .check {
   &__and-radio,
   &__and-mark {
-    height: 1.7rem;
-    width: 1.7rem;
-    border: 0.15rem solid var(--cafe-color-brown);
-    border-radius: 50%;
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
+    @include size(1.7rem);
+    @include border(var(--cafe-color-brown), 0.15rem, 50%);
+    @include absolute-setting(50%, 0, auto, auto, translateY(-50%));
     transition: border-color 0.2s ease, box-shadow 0.2s ease;
     &:hover {
       box-shadow: inset 0 0 0 0.1rem var(--cafe-color-brown);
@@ -20,21 +15,22 @@
   &__and-radio,
   &__and-mark {
     &::after {
-      @extend %check-and-setting;
+      @include absolute-setting;
+      opacity: 0;
       height: 0.7rem;
     }
   }
   &__and-radio {
     &::after {
+      @include style-color(none);
       width: 0.7rem;
       border-radius: 50%;
-      background-color: var(--cafe-color-brown);
     }
   }
   &__and-mark {
     border-radius: 10%;
     &::after {
-      width: 0.3rem;
+      @include size(0.3rem, 50%);
       border: solid var(--cafe-color-brown);
       border-width: 0 0.15rem 0.15rem 0;
     }
@@ -51,32 +47,152 @@ input[type="checkbox"]:not(:checked) + label .popup__text-selected::after {
   opacity: 0;
 }
 
+// input、textarea輸入框樣式
 .check {
   &__inputBox {
-
-    input {
-      @extend %base-btn-setting;
+    input,
+    textarea {
+      @include border(var(--cafe-color-brown-lighter));
+      @include style-color(var(--cafe-color-brown), none);
       width: 100%;
+      display: flex;
       font-size: var(--cafe--font-sm);
-      border-color: var(--cafe-color-brown-lighter);
       padding: var(--cafe--padding-xs);
-      color: var(--cafe-color-brown);
+      transition: all 0.35s ease-in-out;
       resize: none;
       &:focus {
+        @include border(var(--cafe-color-brown));
         outline: none;
-        border-color: var(--cafe-color-brown);
       }
     }
-    textarea {
-      @extend %base-btn-setting;
-      border-color: var(--cafe-color-brown-lighter);
-      padding: var(--cafe--padding-xs);
-      color: var(--cafe-color-brown);
-      resize: none;
-      &:focus {
-        outline: none;
-        border-color: var(--cafe-color-brown); /* 聚焦時的邊框顏色 */
+  }
+}
+
+// 側邊欄樣式
+.sidebar {
+  &__menu-icon {
+    display: none;
+    & ~ label {
+      @include absolute-setting(3.5rem, auto, 0, auto, translate(50%, 50%));
+      @include border(var(--cafe-color-brown), 0.2rem, 50%);
+      @include style-color(none, var(--cafe-color-white));
+      padding: var(--cafe--padding-xxs);
+      transition: all 0.35s ease-in-out;
+      cursor: pointer;
+      z-index: 50;
+      svg {
+        @include size(2rem);
+        @include style-color(var(--cafe-color-brown), none);
+        transform: rotate(180deg);
+        transition: all 0.35s ease-in-out;
       }
+    }
+    &:checked {
+      & ~ .sidebar__head .sidebar__title {
+        @include size(100%, auto);
+      }
+      & ~ label svg {
+        transform: rotate(0deg);
+      }
+      ~ .sidebar__head .sidebar__item {
+        width: 100%;
+        flex-direction: row;
+        justify-content: flex-start;
+        h2 {
+          @include size(auto, 100%);
+          display: flex;
+          align-items: center;
+          opacity: 1;
+        }
+        h3 {
+          @include size(auto, 0);
+          opacity: 0;
+        }
+      }
+    }
+  }
+  &__container {
+    @include flex-center(column, baseline, baseline);
+    @include size(12rem, 100%);
+    position: relative;
+    padding: var(--cafe--padding-xxl);
+    border-top-right-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    transition: all 0.35s ease-in-out;
+    &:has(.sidebar__menu-icon:checked) {
+      @include size(23rem, 100%);
+    }
+    ul {
+      display: grid;
+      gap: 1.5rem;
+    }
+  }
+  &__title {
+    @include flex-center(row, center, baseline);
+    @include size(6rem);
+    margin-bottom: 5rem;
+    gap: 1rem;
+    overflow: hidden;
+    h4,
+    p {
+      @extend %text-ellipsis;
+      @include style-color(var(--cafe-color-white), none);
+    }
+  }
+  &__logo {
+    @include size(5rem);
+    flex: 0 0 5rem;
+  }
+  &__head {
+    img {
+      @include size(6rem);
+    }
+  }
+  &__item {
+    @include size(5rem);
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    padding-left: 0.7rem;
+    border-radius: var(--cafe-radius-md);
+    transition: all 0.35s ease-in-out;
+    cursor: pointer;
+    div {
+      @include flex-center(column, center, baseline);
+    }
+    svg,
+    h3 {
+      transition: all 0.35s ease-in-out;
+    }
+    h2 {
+      font-size: var(--cafe--font-xl);
+      @extend %text-ellipsis;
+    }
+    h3 {
+      font-size: var(--cafe--font-xs);
+      font-weight: 400;
+      letter-spacing: 0.1rem;
+      opacity: 1;
+    }
+    svg {
+      @include size(3.5rem, auto);
+      flex: 0 0 2.8rem;
+      object-fit: contain;
+    }
+  }
+}
+
+// 禁止按鈕
+.disabled-button {
+  cursor: not-allowed !important;
+  @include style-color(var(--cafe-color-brown), var(--cafe-color-gray));
+  svg {
+    background-color: var(--cafe-color-gray) !important;
+    &:hover {
+      @include style-color(
+        var(--cafe-color-brown),
+        var(--cafe-color-gray) !important
+      );
     }
   }
 }
@@ -100,20 +216,5 @@ input[type="checkbox"]:not(:checked) + label .popup__text-selected::after {
   100% {
     transform: translate(-50%, -50%) scale(0) rotate(45deg);
     opacity: 0;
-  }
-}
-
-.disabled-button {
-  cursor: not-allowed !important;
-  background-color: var(--cafe-color-gray);
-  color: var(--cafe-color-brown);
-  &:hover {
-    background-color: var(var(--cafe-color-gray));
-  }
-  svg {
-    background-color: var(--cafe-color-gray);
-    &:hover {
-      color: inherit;
-    }
   }
 }
